Chapter 08: Creating an authorization server